Changed: Gate operator works on Data.